--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@types/node": "12.12.8",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "@types/react-router-dom": "^5.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "typescript": "3.7.2"
   },
@@ -32,5 +34,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/enzyme": "^3.10.3",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/material-ui": "^0.21.7",
+    "@types/react-router": "^5.1.3",
+    "@types/react-test-renderer": "^16.9.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "material-ui": "^0.20.2",
+    "react-router": "^5.1.2",
+    "react-test-renderer": "^16.12.0"
   }
 }
