--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.8",
+    "@types/query-string": "^6.3.0",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
     "@types/react-router-dom": "^5.1.2",
     "axios": "^0.19.0",
+    "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-player": "^1.14.2",
