--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@types/query-string": "^6.3.0",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "@types/react-modal": "^3.10.0",
     "@types/react-router-dom": "^5.1.2",
     "axios": "^0.19.0",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-modal": "^3.11.1",
     "react-player": "^1.14.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
