--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/icons": "^4.5.1",
     "@types/axios": "^0.14.0",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.8",
@@ -10,6 +11,7 @@
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
     "@types/react-modal": "^3.10.0",
+    "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
     "axios": "^0.19.0",
     "query-string": "^6.9.0",
@@ -17,6 +19,7 @@
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.1",
     "react-player": "^1.14.2",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "typescript": "3.7.2"
