--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-modal": "^3.10.0",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.2",
+    "@types/redux-thunk": "^2.1.0",
     "axios": "^0.19.0",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
@@ -22,6 +23,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "redux-thunk": "^2.3.0",
     "typescript": "3.7.2"
   },
   "scripts": {
